# hierag

./: .gitignore  00_utils_example.py  01_crawl.ipynb  01_crawl.py  02_scrape.ipynb  02_scrape.py  03_parse.ipynb  03_parse.py  04_embed.ipynb  04_embed.py  05_llmapi.ipynb  05_llmapi.py  HYBRID_RETRIEVAL.md  README.md  ROADMAP.md  agents.md  app.py  app_db.py  chat_app.py  pyproject.toml
backend/: README.md  __init__.py  main.py  pyproject.toml
backend/app/: crawl.py  deps.py  embed.py  fastlite_db.py  llmapi_flow.py  llmapi_retrieval.py  llmapi_shared.py  main.py  models.py  scrape.py  service.py  site_config.py
backend/playground/: README.md  data_analysis.ipynb
backend/tests/: test_api.py
core/: deps.py  fastlite_db.py  llmapi.py  llmapi_flow.py  llmapi_retrieval.py  llmapi_shared.py  parse_content.py  service.py
docs/: _quarto.yml  core-directory-diagram.qmd  hybrid-retrieval.qmd  index.qmd
docs/_site/: core-directory-diagram.html  hybrid-retrieval.html  index.html  search.json
docs/_site/tutorials/: 01_analysis.html  README.md
docs/tutorials/: 01_analysis.ipynb
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
frontend/.storybook/: preview.js
frontend/src/: App.jsx  App.stories.jsx  App.tsx  main.tsx
frontend/src/components/: ChatApp.stories.tsx
frontend/src/hooks/: useApiBase.ts
interfaces/api/: README.md  main.py
interfaces/client/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
interfaces/dashboard/: __init__.py  app.py
interfaces/web/: main.py
(+4 files in other folders)
